# hifisampler-rs

./: .gitignore  Cargo.toml  README.md  config.default.yaml  config.yaml
.github/workflows/: ci.yml
crates/hifisampler-bridge/: Cargo.toml
crates/hifisampler-bridge/src/: main.rs
crates/hifisampler-core/: Cargo.toml
crates/hifisampler-core/src/: audio.rs  cache.rs  config.rs  ep.rs  growl.rs  hnsep.rs  lib.rs  mel.rs  models.rs  parse_utau.rs  resampler.rs  vocoder.rs
crates/hifisampler-core/tests/: integration_tests.rs
crates/hifisampler-server/: Cargo.toml
crates/hifisampler-server/src/: main.rs  stats.rs  webui.rs
installer/: setup.iss
scripts/: compare_onnx_pytorch.py  convert_hnsep_to_onnx.py
tests/: dump_python_reference.py  validate_pipeline.py
tests/reference_data/: drc_test_input.npy  drc_test_output.npy  mel_drc.npy  mel_filterbank_htk.npy  mel_filterbank_slaney.npy  mel_raw.npy  mel_shifted_drc.npy  params.json  pitchbend_test.npy  test_audio.npy
webui/: index.html
