[package]
name = "hifisampler-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hifisampler"
path = "src/main.rs"

[dependencies]
reqwest.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
