[package]
edition.workspace = true
name = "hifisampler-bridge"
version.workspace = true

[[bin]]
name = "hifisampler"
path = "src/main.rs"

[dependencies]
# No external dependencies for HTTP — uses raw std::net::TcpStream
# to keep binary size minimal (bridge only talks to localhost)

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.59", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
]}
