[package]
name = "hifisampler-core"
version.workspace = true
edition.workspace = true

[dependencies]
ort.workspace = true
ndarray.workspace = true
hound.workspace = true
rubato.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
regex.workspace = true
parking_lot.workspace = true
num-complex.workspace = true
tracing-subscriber.workspace = true
