[package]
edition.workspace = true
name = "hifisampler-core"
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hound.workspace = true
ndarray.workspace = true
num-complex.workspace = true
ort.workspace = true
parking_lot.workspace = true
regex.workspace = true
rubato.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
