[package]
name = "hifisampler-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hifisampler-server"
path = "src/main.rs"

[dependencies]
hifisampler-core = { path = "../hifisampler-core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
parking_lot.workspace = true
