[package]
edition.workspace = true
name = "hifisampler-server"
version.workspace = true

[[bin]]
name = "hifisampler-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hifisampler-core = {path = "../hifisampler-core"}
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"] }
